Fix layout on mobile.

--- a/public/main.css
+++ b/public/main.css
@@ -77,7 +77,7 @@ main {
 
 .pull-request {
     display: grid;
-    grid-template-columns: 2rem 6rem auto;
+    grid-template-columns: 1fr 3fr;
     gap: 1.5rem;
 
 	border: 2px solid var(--color-border);
@@ -89,6 +89,22 @@ main {
 
 .pull-request.draft {
 	background-color: var(--color-element-alternate-background);
+}
+
+@media (max-width: 1000px) {
+    .pull-request > div:nth-child(3) {
+        grid-column: span 2;
+    }
+}
+
+@media (min-width: 1000px) {
+    .pull-request {
+        grid-template-columns: 2rem 6rem auto;
+    }
+
+    .pull-request > div:nth-child(3) {
+        grid-column: auto;
+    }
 }
 
 .pull-request > div {
